🩹 v0.1.4 Hotfix dark in posts - Added profile in dark mode for post - Fixed dark color for controls in post

--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -245,6 +245,17 @@ html[data-theme='dark'] {
                 }
     
             }
+
+            .__controls {
+
+                .--btn-controls {
+    
+                    color: #a1a5d5;
+                    background-color: #1b1d31;
+    
+                }
+    
+            }
     
         }
     
